--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,20 @@
 
 
 }
+
+.group {
+    display: flex;
+    flex-direction: column;
+}
+
+.userCard{
+    border-radius: 20px;
+    min-width: 200px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(147, 147, 147);
+    margin-bottom: 20px;
+    padding-left: 1rem;
+}
+
